# danacvtTestSpecsGenerator

./: README.md  login_spect_example.txt  pyproject.toml
danacvtTestsSpecsGenerator/: cli.py  config.py  models.py  requirements.txt
danacvtTestsSpecsGenerator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
danacvtTestsSpecsGenerator/exporters/: csv_exporter.py  feature_exporter.py
danacvtTestsSpecsGenerator/generators/: doc_tests.py  heuristic_ui_spec.py  ui_tests.py
danacvtTestsSpecsGenerator/llm/: booster.py  ui_spec_text.py  ui_spec_vision.py
danacvtTestsSpecsGenerator/parsers/: docs_loader.py  ocr.py  ui_ocr_parser.py
danacvtTestsSpecsGenerator/updaters/: cvs_updater.py  ui_spec_updater.py
danacvt_tests_specs_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
outputs/: scene_flow_llm.md  scenes_flow_cases.csv  test_cases.csv  testcases.csv  ui_llm.md  ui_llm2.md
